--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -604,6 +604,7 @@
     background-color: #020d25d1;
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
+    z-index: 9999;
 
     display: flex;
     align-items: center;
@@ -709,12 +710,14 @@
 }
 
 .avatarSection.investwidgetSection{
-    padding-inline: 30px;
-    width: 370px;
+    padding-inline: 1.5rem;
+    padding-block: 1.2rem;
+    width: 350px;
+    max-width: 90vw;
 }
 
 .investwidgetSection > p{
-    font-size: 0.95em;
+    font-size: 0.88em;
     color: var(--grey-clr);
     font-weight: 400;
     text-align: center;
